examples/errors/programs/error_3.bas
100 SAY "Test program"
200 SAY "We are making a basic interpreter"
